CFLAGS := -g -O0 -Wall -Werror
bin_PROGRAMS = vmscheme
vmscheme_SOURCES = builtin_types.c \
                   environment.c \
                   environment.h \
                   instruction.h \
                   instruction.c \
                   main.c \
                   object.c \
                   object.h \
                   opcode.h \
                   parser.c \
                   parser.h \
                   primitive_procedures.c \
                   primitive_procedures.h \
                   stack.c \
                   stack.h \
                   type.c \
                   type.h \
                   compiler.c \
                   compiler.h \
                   utils.c \
                   utils.h \
                   eval.c \
                   eval.h
